--- a/css/resume.css
+++ b/css/resume.css
@@ -104,7 +104,7 @@ section.resume-section {
     padding-bottom: 3rem !important; } }
 
 .bg-primary {
-  background-color: #BD5D38 !important; }
+  background-color: ##1e5c84 !important; }
 
 .text-primary {
   color: #BD5D38 !important; }
