--- a/css/resume.css
+++ b/css/resume.css
@@ -34,7 +34,7 @@ h2 {
 .subheading {
   text-transform: uppercase;
   font-weight: 500;
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 1.35rem; }
 
 .list-social-icons a {
@@ -55,6 +55,7 @@ h2 {
 
 @media (min-width: 992px) {
   #sideNav {
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     position: fixed;
     top: 0;
